// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`jest-auto-snapshots > ProgressBar Matches snapshot when boolean prop "fullWidth" is set to: "false" 1`] = `
<styled.div
  fullWidth={false}
>
  <styled.div
    progress="jest-auto-snapshots String Fixture"
  />
</styled.div>
`;

exports[`jest-auto-snapshots > ProgressBar Matches snapshot when passed all props 1`] = `
<styled.div
  fullWidth={true}
>
  <styled.div
    progress="jest-auto-snapshots String Fixture"
  />
</styled.div>
`;

exports[`jest-auto-snapshots > ProgressBar Matches snapshot when passed only required props 1`] = `
<styled.div
  fullWidth={false}
>
  <styled.div
    progress="jest-auto-snapshots String Fixture"
  />
</styled.div>
`;
